# DataForge

./: .gitignore  CLAUDE.md.disabled  README.md  RULES.md  asr_replacement_dict.txt  claude.md  docker-compose.prod.yml  docker-compose.yml  docker-manage.sh  manage.sh
backend/: .dockerignore  .env.example  .python-version  Dockerfile  pyproject.toml
backend/app/: __init__.py  celery_app.py  celery_scheduler.py  celery_signals.py  celery_tasks.py  config.py  database.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  accounts.py  ai_config.py  api_keys.py  asr_config.py  auth.py  chat.py  dajiala_config.py  data_analysis.py  dingtalk.py  feishu_config.py  health.py  (+15 more)
backend/app/clients/: __init__.py
backend/app/middleware/: __init__.py  api_key.py  jwt_auth.py  page_api_permission.py
backend/app/models/: __init__.py  ai_config.py  analysis_result.py  api_key.py  asr_config.py  base.py  call_record.py  conversation.py  dajiala_config.py  dingtalk_config.py  feishu_bitable.py  feishu_client.py  feishu_config.py  feishu_table.py  html_template.py  page.py  prompt.py  robot_config.py  staff.py  task.py  task_execution.py  user.py  user_preference.py  wechat_account.py  wechat_account_group.py  wechat_account_tag.py  wechat_article.py  yunke_account.py  yunke_company.py
backend/app/scheduler/: __init__.py  core.py  executor.py  leader_lock.py  registry.py  task_logger.py
backend/app/schemas/: __init__.py  response.py  streaming.py  yunke.py
backend/app/services/: __init__.py  account_service.py  ai_analysis_service.py  asr_service.py  asr_verify_service.py  avatar_service.py  call_record_analysis_service.py  chat_service.py  chat_tools.py  dajiala_article_service.py  dajiala_verify_service.py  data_sync_service.py  feishu_bitable_service.py  notification_service.py  staff_mapping_service.py  task_service.py  wechat_article_parser.py
backend/app/tasks/: __init__.py  asr_tasks.py  base.py  cleanup.py  cleanup_tasks.py  sync.py  sync_tasks.py  test.py
backend/app/utils/: __init__.py  async_helper.py  auth.py  cache.py  http_client.py  jwt_auth.py  page_api_cache.py  redis_client.py  safe_eval.py  task_lock.py
backend/scripts/: __init__.py  _utils.py  asr_text_replace.py  asr_transcribe.py  cleanup_executions.py  cleanup_stuck_tasks.py  create_admin.py  example_task.py  migrate_task_names.py  sync_accounts.py  sync_call_logs_to_feishu.py  sync_call_logs_to_pgsql.py
(+331 files in other folders)
