[project]
name = "yunke-transit-backend"
version = "0.1.0"
description = "云客中转后端服务"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.0",
    "uvicorn[standard]>=0.34.0",
    "sqlmodel>=0.0.22",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "loguru>=0.7.3",
    "python-multipart>=0.0.20",
    "httpx[http2]>=0.28.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "psycopg2-binary>=2.9.10",
    "ruff>=0.8.0",
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",
    "gevent>=24.11.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

